# app/Http/Controllers/ShootController.php
@@ -9,6 +9,52 @@ use App\Services\Shoot\ShootService;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\Auth;
 
+/**
+ * @OA\Post(
+ *     path= "/shot/{id}/{code}",
+ *     operationId = "Shots",
+ *     tags= {"API"},
+ *     summary = "Shoots",
+ *     @OA\Parameter(
+ *          name= "id",
+ *          in= "path",
+ *          description= "Game id",
+ *          required= true,
+ *     ),
+ *     @OA\Parameter(
+ *          name= "code",
+ *          in= "path",
+ *          description= "The user's code",
+ *          required= true,
+ *     ),
+ *     @OA\RequestBody(
+ *          @OA\MediaType(
+ *              mediaType="multipart/form-data",
+ *              @OA\Schema(
+ *                  required= {"x", "y"},
+ *                  @OA\Property(
+ *                      property="x",
+ *                      type="integer",
+ *                      example=0,
+ *                  ),
+ *                  @OA\Property(
+ *                      property="y",
+ *                      type="integer",
+ *                      example=0,
+ *                  ),
+ *              ),
+ *          ),
+ *     ),
+ *     @OA\Response(
+ *          response="200",
+ *          description= "OK",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="success", type="boolean", example="true"),
+ *          ),
+ *     ),
+ * ),
+ */
+
 class ShootController extends Controller {
     private ShootService $shootService;
 
